Changelog:
==========

v1.20

- Changes / Features

Externalization of PS3/Xbox playback profiles, it's now possible to create profiles for any media renderer (Popcorn Hour already included)
Handling of UTF8 and UTF16 encoding, and case insensitive external subtitles
CUE playlist support
Updated tsMuxeR binaries (better H264 camcorders support)
Windows: Launcher now detects Java 64 bits if installed
Windows: Updated mencoder/mplayer/ffmpeg builds
OSX: tsMuxeR and FLAC binaries are now available in this build, this adds a lot of features on Mac which were previously only available on Windows or Linux (like DTS and remux support)
OSX: iPhoto and iTunes library support (thanks to Pedro Simoes)
OSX: Native look, now looks like a Mac application
OSX: Updated mencoder/mplayer/ffmpeg builds, support for FriBidi
OSX: Updated build script to make a bundle or dmg automatically (thanks to Josh Klun)
New translations: Czech (thanks to Mila), Danish (thanks to Niclas Gleesborg), Slovenian (thanks to Rob Wall)

- Fixes

!New and experimental HTTP engine!
. better network performances ?
. better media renderer support ? (my set top box at least)
. better AVI/MP4 support on ps3 ?
Media library major speed and size improvements (you may have to reset the library)
Improved fix for the stopped videos issue
Better support for mkvs with NTSC video track
Fix spaces usage in the audio/subtitles configurations
Fixed black screen with some AVC videos badly flagged at L4.1
Fixed cover art files not always read
Fixed bug with multiple playlist in one folder
OSX: Reopening of the main window after you closed it is now possible, also fixes start as minimized (thanks to grcvoodoorush)
OSX: Configuration file now stored outside of the bundle so that you don't lose your settings when you upgrade to a new version (thanks to grcvoodoorush)
OSX: Unicode files are now playable (thanks to Thierry Pittet)

v1.10.5

- Fixes:

Regression in FLAC playback
Fixed subtitles font detection on Windows