@@ -1,12 +1,10 @@
-# ps3mediaserver renderer profile for Sony Bravia 4500 series
+# ps3mediaserver renderer profile for Samsung Wiselink
 # Refer to PS3.conf for help
 
-RendererName=Sony Bravia 4500 Series
+RendererName=Samsung Wiselink
 RendererIcon=bravia.png
-UserAgentSearch=notusedhere
-UserAgentAdditionalHeader=X-AV-Client-Info
-UserAgentAdditionalHeaderSearch=BRAVIA KDL.+4[0-9]{3}
-Video=false
+UserAgentSearch=wiselink
+Video=true
 Audio=true
 Image=true
 SeekByTime=false
@@ -21,5 +19,5 @@ MaxVideoBitrateMbps=0
 MaxVideoWidth=0
 MaxVideoHeight=0
 MimeTypesChanges=audio/wav=audio/L16
-TranscodeExtensions=
-StreamExtensions=
+TranscodeExtensions=mov
+StreamExtensions=mp3,mp4,avi
